--- a/files/spacedRepetition.org
+++ b/files/spacedRepetition.org
@@ -11,12 +11,12 @@
   :ID:       c4e8999f-cd7b-49ac-932e-dc8aa1676fa5
   :DRILL_LAST_INTERVAL: 0.0
   :DRILL_REPEATS_SINCE_FAIL: 1
-  :DRILL_TOTAL_REPEATS: 18
-  :DRILL_FAILURE_COUNT: 14
-  :DRILL_AVERAGE_QUALITY: 1.611
+  :DRILL_TOTAL_REPEATS: 19
+  :DRILL_FAILURE_COUNT: 15
+  :DRILL_AVERAGE_QUALITY: 1.579
   :DRILL_EASE: 2.08
   :DRILL_LAST_QUALITY: 1
-  :DRILL_LAST_REVIEWED: [2018-10-15 Mon 14:14]
+  :DRILL_LAST_REVIEWED: [2018-11-06 Tue 11:34]
   :END:
 Define this word
 **** English
@@ -134,17 +134,18 @@ The us of words to express something other than and especially the opposite of
 the literal meaning
 
 *** Adjective :drill:
+    SCHEDULED: <2018-11-10 Sat>
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
   :ID:       4a82cb00-118c-4a69-87f3-70e5837b7697
-  :DRILL_LAST_INTERVAL: 0.0
-  :DRILL_REPEATS_SINCE_FAIL: 1
-  :DRILL_TOTAL_REPEATS: 7
+  :DRILL_LAST_INTERVAL: 3.872
+  :DRILL_REPEATS_SINCE_FAIL: 2
+  :DRILL_TOTAL_REPEATS: 8
   :DRILL_FAILURE_COUNT: 4
-  :DRILL_AVERAGE_QUALITY: 2.714
+  :DRILL_AVERAGE_QUALITY: 2.875
   :DRILL_EASE: 2.36
-  :DRILL_LAST_QUALITY: 2
-  :DRILL_LAST_REVIEWED: [2018-10-15 Mon 14:17]
+  :DRILL_LAST_QUALITY: 4
+  :DRILL_LAST_REVIEWED: [2018-11-06 Tue 11:37]
   :END:
 Define the word
 **** English
@@ -320,12 +321,12 @@ directly relate to being, in particular becoming, existence, reality.]
   :ID:       2f0293bf-b1e9-4e87-9c1a-818e5e9cbdab
   :DRILL_LAST_INTERVAL: 0.0
   :DRILL_REPEATS_SINCE_FAIL: 1
-  :DRILL_TOTAL_REPEATS: 6
-  :DRILL_FAILURE_COUNT: 5
-  :DRILL_AVERAGE_QUALITY: 1.333
+  :DRILL_TOTAL_REPEATS: 7
+  :DRILL_FAILURE_COUNT: 6
+  :DRILL_AVERAGE_QUALITY: 1.285
   :DRILL_EASE: 2.36
   :DRILL_LAST_QUALITY: 1
-  :DRILL_LAST_REVIEWED: [2018-10-15 Mon 14:16]
+  :DRILL_LAST_REVIEWED: [2018-11-06 Tue 11:36]
   :END:
 Define the word
 **** English
@@ -341,12 +342,12 @@ There is a limited branch of children whose precocity has led them to be deemed 
   :ID:       71b134e4-084c-4c64-ab68-661818dd23f4
   :DRILL_LAST_INTERVAL: 0.0
   :DRILL_REPEATS_SINCE_FAIL: 1
-  :DRILL_TOTAL_REPEATS: 5
-  :DRILL_FAILURE_COUNT: 4
+  :DRILL_TOTAL_REPEATS: 6
+  :DRILL_FAILURE_COUNT: 5
   :DRILL_AVERAGE_QUALITY: 2.0
   :DRILL_EASE: 2.5
-  :DRILL_LAST_QUALITY: 1
-  :DRILL_LAST_REVIEWED: [2018-10-15 Mon 14:15]
+  :DRILL_LAST_QUALITY: 2
+  :DRILL_LAST_REVIEWED: [2018-11-06 Tue 11:34]
   :END:
 Define the word
 **** English
@@ -362,12 +363,12 @@ Gary was unflappable in his handling of the buses getting stuck in the mud.
   :ID:       ef491477-ccb8-4db2-972f-5ab9f773b089
   :DRILL_LAST_INTERVAL: 0.0
   :DRILL_REPEATS_SINCE_FAIL: 1
-  :DRILL_TOTAL_REPEATS: 6
-  :DRILL_FAILURE_COUNT: 5
-  :DRILL_AVERAGE_QUALITY: 1.667
+  :DRILL_TOTAL_REPEATS: 7
+  :DRILL_FAILURE_COUNT: 6
+  :DRILL_AVERAGE_QUALITY: 1.572
   :DRILL_EASE: 2.36
   :DRILL_LAST_QUALITY: 1
-  :DRILL_LAST_REVIEWED: [2018-10-15 Mon 14:15]
+  :DRILL_LAST_REVIEWED: [2018-11-06 Tue 11:34]
   :END:
 Define the word
 **** English
@@ -384,12 +385,12 @@ The verisimilitude of her performance is gripping.
   :ID:       0112f1c2-b988-48db-a6a4-48877adce953
   :DRILL_LAST_INTERVAL: 0.0
   :DRILL_REPEATS_SINCE_FAIL: 1
-  :DRILL_TOTAL_REPEATS: 1
-  :DRILL_FAILURE_COUNT: 1
+  :DRILL_TOTAL_REPEATS: 2
+  :DRILL_FAILURE_COUNT: 2
   :DRILL_AVERAGE_QUALITY: 1.0
   :DRILL_EASE: 2.5
   :DRILL_LAST_QUALITY: 1
-  :DRILL_LAST_REVIEWED: [2018-10-15 Mon 14:19]
+  :DRILL_LAST_REVIEWED: [2018-11-06 Tue 11:34]
   :END:
 Define the word
 **** English
@@ -428,17 +429,18 @@ society.
 
 
 *** Noun                                                        :drill:
+    SCHEDULED: <2018-11-10 Sat>
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
   :ID:       92440648-6112-4c8f-9a0a-e05313b9a8f5
-  :DRILL_LAST_INTERVAL: 0.0
-  :DRILL_REPEATS_SINCE_FAIL: 1
-  :DRILL_TOTAL_REPEATS: 4
+  :DRILL_LAST_INTERVAL: 3.8466
+  :DRILL_REPEATS_SINCE_FAIL: 2
+  :DRILL_TOTAL_REPEATS: 5
   :DRILL_FAILURE_COUNT: 4
-  :DRILL_AVERAGE_QUALITY: 1.25
-  :DRILL_EASE: 2.5
-  :DRILL_LAST_QUALITY: 2
-  :DRILL_LAST_REVIEWED: [2018-10-15 Mon 14:15]
+  :DRILL_AVERAGE_QUALITY: 1.6
+  :DRILL_EASE: 2.36
+  :DRILL_LAST_QUALITY: 3
+  :DRILL_LAST_REVIEWED: [2018-11-06 Tue 11:36]
   :END:
 Define the word
 **** English
@@ -455,12 +457,12 @@ one word answers.
   :ID:       ac519bac-9307-4807-bb99-dd6304d3ae54
   :DRILL_LAST_INTERVAL: 0.0
   :DRILL_REPEATS_SINCE_FAIL: 1
-  :DRILL_TOTAL_REPEATS: 1
-  :DRILL_FAILURE_COUNT: 1
+  :DRILL_TOTAL_REPEATS: 2
+  :DRILL_FAILURE_COUNT: 2
   :DRILL_AVERAGE_QUALITY: 1.0
   :DRILL_EASE: 2.5
   :DRILL_LAST_QUALITY: 1
-  :DRILL_LAST_REVIEWED: [2018-10-15 Mon 14:18]
+  :DRILL_LAST_REVIEWED: [2018-11-06 Tue 11:35]
   :END:
 Define the word
 **** English
@@ -491,12 +493,12 @@ The legal parlance used by attorneys has its roots in the Latin language.
   :ID:       8c9463bd-afaa-42c8-8cc2-fc44f75ef34b
   :DRILL_LAST_INTERVAL: 0.0
   :DRILL_REPEATS_SINCE_FAIL: 1
-  :DRILL_TOTAL_REPEATS: 1
-  :DRILL_FAILURE_COUNT: 1
+  :DRILL_TOTAL_REPEATS: 2
+  :DRILL_FAILURE_COUNT: 2
   :DRILL_AVERAGE_QUALITY: 1.0
   :DRILL_EASE: 2.5
   :DRILL_LAST_QUALITY: 1
-  :DRILL_LAST_REVIEWED: [2018-10-15 Mon 14:18]
+  :DRILL_LAST_REVIEWED: [2018-11-06 Tue 11:37]
   :END:
 Define the word
 **** English
@@ -519,12 +521,12 @@ nature spirit with ears and a tail resembling those of a horse.
   :ID:       e1d06f2f-5094-474e-975c-d8d6730d444d
   :DRILL_LAST_INTERVAL: 0.0
   :DRILL_REPEATS_SINCE_FAIL: 1
-  :DRILL_TOTAL_REPEATS: 2
-  :DRILL_FAILURE_COUNT: 1
-  :DRILL_AVERAGE_QUALITY: 2.5
+  :DRILL_TOTAL_REPEATS: 3
+  :DRILL_FAILURE_COUNT: 2
+  :DRILL_AVERAGE_QUALITY: 2.0
   :DRILL_EASE: 2.36
-  :DRILL_LAST_QUALITY: 2
-  :DRILL_LAST_REVIEWED: [2018-10-15 Mon 14:17]
+  :DRILL_LAST_QUALITY: 1
+  :DRILL_LAST_REVIEWED: [2018-11-06 Tue 11:36]
   :END:
 Define the word
 **** English
@@ -603,12 +605,12 @@ Yet to them we can impute none of history's great convulsions
   :ID:       697fe722-2239-4da7-b5c8-e7600a942a9c
   :DRILL_LAST_INTERVAL: 0.0
   :DRILL_REPEATS_SINCE_FAIL: 1
-  :DRILL_TOTAL_REPEATS: 1
-  :DRILL_FAILURE_COUNT: 1
+  :DRILL_TOTAL_REPEATS: 2
+  :DRILL_FAILURE_COUNT: 2
   :DRILL_AVERAGE_QUALITY: 1.0
   :DRILL_EASE: 2.5
   :DRILL_LAST_QUALITY: 1
-  :DRILL_LAST_REVIEWED: [2018-10-15 Mon 14:18]
+  :DRILL_LAST_REVIEWED: [2018-11-06 Tue 11:36]
   :END:
 Define the word
 **** English
@@ -637,12 +639,12 @@ her nascent singing career
   :ID:       06a40333-0522-405f-aa65-9fc1e20cf16c
   :DRILL_LAST_INTERVAL: 0.0
   :DRILL_REPEATS_SINCE_FAIL: 1
-  :DRILL_TOTAL_REPEATS: 1
-  :DRILL_FAILURE_COUNT: 1
+  :DRILL_TOTAL_REPEATS: 2
+  :DRILL_FAILURE_COUNT: 2
   :DRILL_AVERAGE_QUALITY: 1.0
   :DRILL_EASE: 2.5
   :DRILL_LAST_QUALITY: 1
-  :DRILL_LAST_REVIEWED: [2018-10-15 Mon 14:19]
+  :DRILL_LAST_REVIEWED: [2018-11-06 Tue 11:37]
   :END:
 Define the word
 **** English
@@ -747,6 +749,7 @@ The headquarters of the Shanghai Public Security Bureau (PSB), a concrete buildi
 *** Noun                                                        :drill:
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
+  :ID:       40fd167e-3f5e-4e61-8ed4-8fb47445f2f5
   :END:
 Define the word
 **** English
@@ -780,6 +783,7 @@ moment of happiness.
 *** Adjective                                             :drill:
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
+  :ID:       83d92250-d3e1-4769-83b9-ebc98c056940
   :END:
 Define the word
 **** English
@@ -793,6 +797,7 @@ discipline
 *** Verb                                                              :drill:
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
+  :ID:       0ccc8307-1620-4ddd-bba7-3c068b7d54a5
   :END:
 Define the word
 **** English
@@ -803,6 +808,18 @@ to interpret (something, such as a statement or action) wrongly
 I instantly turned away, lest he should see and misconstrue my emotion.
 - Anne Bronte
 
+*** Adjective                                                         :drill:
+  :PROPERTIES:
+  :DRILL_CARD_TYPE: twosided
+  :ID:       017d6f2c-9cfa-4b72-8685-f40fd4339e78
+  :END:
+Define the word
+**** English
+haute
+**** Definition
+fashionably elegant or high-class
+**** Example sentence
+a store filled with haute kisch
 
 *** Fact
 # :drill:
