--- a/files/spacedRepetition.org
+++ b/files/spacedRepetition.org
@@ -5,18 +5,18 @@
 
 ** Vocabulary
 
-*** Adjective :drill:
+*** Adjective :drill:leech:
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
   :ID:       c4e8999f-cd7b-49ac-932e-dc8aa1676fa5
   :DRILL_LAST_INTERVAL: 0.0
   :DRILL_REPEATS_SINCE_FAIL: 1
-  :DRILL_TOTAL_REPEATS: 19
-  :DRILL_FAILURE_COUNT: 15
-  :DRILL_AVERAGE_QUALITY: 1.579
+  :DRILL_TOTAL_REPEATS: 20
+  :DRILL_FAILURE_COUNT: 16
+  :DRILL_AVERAGE_QUALITY: 1.55
   :DRILL_EASE: 2.08
   :DRILL_LAST_QUALITY: 1
-  :DRILL_LAST_REVIEWED: [2018-11-06 Tue 11:34]
+  :DRILL_LAST_REVIEWED: [2018-11-06 Tue 13:35]
   :END:
 Define this word
 **** English
@@ -73,18 +73,17 @@ Cutting-edge young people were calling themselves neo-liberal, adopting a term
 that had been anathema only a few years earlier.
 
 *** Adjective :drill:
-    SCHEDULED: <2018-10-17 Wed>
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
   :ID:       df98658b-d200-455f-85ea-58e8e90a6196
-  :DRILL_LAST_INTERVAL: 11.6217
-  :DRILL_REPEATS_SINCE_FAIL: 3
-  :DRILL_TOTAL_REPEATS: 5
-  :DRILL_FAILURE_COUNT: 2
-  :DRILL_AVERAGE_QUALITY: 3.0
+  :DRILL_LAST_INTERVAL: 0.0
+  :DRILL_REPEATS_SINCE_FAIL: 1
+  :DRILL_TOTAL_REPEATS: 6
+  :DRILL_FAILURE_COUNT: 3
+  :DRILL_AVERAGE_QUALITY: 2.667
   :DRILL_EASE: 2.6
-  :DRILL_LAST_QUALITY: 4
-  :DRILL_LAST_REVIEWED: [2018-10-05 Fri 10:56]
+  :DRILL_LAST_QUALITY: 1
+  :DRILL_LAST_REVIEWED: [2018-11-06 Tue 13:37]
   :END:
 Define the word
 **** English
@@ -180,18 +179,18 @@ lacking in qualities that interest, stimulate, or challenge; dull, flat
 The soup was rather insipid
 
 *** Adjective                                                         :drill:
-    SCHEDULED: <2018-10-16 Tue>
+    SCHEDULED: <2018-12-07 Fri>
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
   :ID:       80e1435a-f047-4c85-b4c8-0553b9de165c
-  :DRILL_LAST_INTERVAL: 10.6458
-  :DRILL_REPEATS_SINCE_FAIL: 3
-  :DRILL_TOTAL_REPEATS: 3
+  :DRILL_LAST_INTERVAL: 30.7561
+  :DRILL_REPEATS_SINCE_FAIL: 4
+  :DRILL_TOTAL_REPEATS: 4
   :DRILL_FAILURE_COUNT: 1
-  :DRILL_AVERAGE_QUALITY: 3.333
-  :DRILL_EASE: 2.46
+  :DRILL_AVERAGE_QUALITY: 3.75
+  :DRILL_EASE: 2.56
   :DRILL_LAST_QUALITY: 5
-  :DRILL_LAST_REVIEWED: [2018-10-05 Fri 10:57]
+  :DRILL_LAST_REVIEWED: [2018-11-06 Tue 13:36]
   :END:
 Define the word
 **** English
@@ -207,18 +206,18 @@ Without her love, life has lost its savor for me.
 
 
 *** Adjective, Noun, Verb :drill:
-    SCHEDULED: <2018-10-17 Wed>
+    SCHEDULED: <2018-12-18 Tue>
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
   :ID:       448993f4-e5af-4d00-a36c-7a4c52aa00f3
-  :DRILL_LAST_INTERVAL: 11.7676
-  :DRILL_REPEATS_SINCE_FAIL: 3
-  :DRILL_TOTAL_REPEATS: 2
+  :DRILL_LAST_INTERVAL: 42.4606
+  :DRILL_REPEATS_SINCE_FAIL: 4
+  :DRILL_TOTAL_REPEATS: 3
   :DRILL_FAILURE_COUNT: 0
   :DRILL_AVERAGE_QUALITY: 5.0
-  :DRILL_EASE: 2.7
+  :DRILL_EASE: 2.8
   :DRILL_LAST_QUALITY: 5
-  :DRILL_LAST_REVIEWED: [2018-10-05 Fri 10:56]
+  :DRILL_LAST_REVIEWED: [2018-11-06 Tue 13:37]
   :END:
 Define the word
 **** English
@@ -231,18 +230,17 @@ in regards to race.
 Kanye has been in a sunken place
 
 *** Adjective, Noun, Verb :drill:
-    SCHEDULED: <2018-10-18 Thu>
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
   :ID:       bf6b6df7-fe1a-4379-851d-e6d61c9542a7
-  :DRILL_LAST_INTERVAL: 3.2413
-  :DRILL_REPEATS_SINCE_FAIL: 2
-  :DRILL_TOTAL_REPEATS: 3
-  :DRILL_FAILURE_COUNT: 1
-  :DRILL_AVERAGE_QUALITY: 2.667
+  :DRILL_LAST_INTERVAL: 0.0
+  :DRILL_REPEATS_SINCE_FAIL: 1
+  :DRILL_TOTAL_REPEATS: 4
+  :DRILL_FAILURE_COUNT: 2
+  :DRILL_AVERAGE_QUALITY: 2.5
   :DRILL_EASE: 2.36
-  :DRILL_LAST_QUALITY: 3
-  :DRILL_LAST_REVIEWED: [2018-10-15 Mon 14:15]
+  :DRILL_LAST_QUALITY: 2
+  :DRILL_LAST_REVIEWED: [2018-11-06 Tue 13:37]
   :END:
 Define the word
 **** English
@@ -282,35 +280,35 @@ semiotics
 The study of signs and symbols and their use or interpretation
 
 *** Fact :drill:
-    SCHEDULED: <2018-10-15 Mon>
+    SCHEDULED: <2018-12-02 Sun>
   :PROPERTIES:
   :DRILL_CARD_TYPE: hide1cloze
   :ID:       55faead9-1faf-45df-9400-719b832bcc0e
-  :DRILL_LAST_INTERVAL: 10.4872
-  :DRILL_REPEATS_SINCE_FAIL: 3
-  :DRILL_TOTAL_REPEATS: 3
+  :DRILL_LAST_INTERVAL: 26.3742
+  :DRILL_REPEATS_SINCE_FAIL: 4
+  :DRILL_TOTAL_REPEATS: 4
   :DRILL_FAILURE_COUNT: 1
-  :DRILL_AVERAGE_QUALITY: 2.667
+  :DRILL_AVERAGE_QUALITY: 3.0
   :DRILL_EASE: 2.36
-  :DRILL_LAST_QUALITY: 3
-  :DRILL_LAST_REVIEWED: [2018-10-05 Fri 10:56]
+  :DRILL_LAST_QUALITY: 4
+  :DRILL_LAST_REVIEWED: [2018-11-06 Tue 13:36]
   :END:
 [Epistemology] is the branch of philosophy concerned with the theory of
 [knowledge].
 
 *** Fact :drill:
-    SCHEDULED: <2018-10-16 Tue>
+    SCHEDULED: <2018-12-03 Mon>
   :PROPERTIES:
   :DRILL_CARD_TYPE: hide1cloze
   :ID:       fd88df70-8678-424c-a897-42b347a0002c
-  :DRILL_LAST_INTERVAL: 10.8056
-  :DRILL_REPEATS_SINCE_FAIL: 3
-  :DRILL_TOTAL_REPEATS: 4
+  :DRILL_LAST_INTERVAL: 27.2632
+  :DRILL_REPEATS_SINCE_FAIL: 4
+  :DRILL_TOTAL_REPEATS: 5
   :DRILL_FAILURE_COUNT: 2
-  :DRILL_AVERAGE_QUALITY: 2.75
-  :DRILL_EASE: 2.5
-  :DRILL_LAST_QUALITY: 4
-  :DRILL_LAST_REVIEWED: [2018-10-05 Fri 10:57]
+  :DRILL_AVERAGE_QUALITY: 2.8
+  :DRILL_EASE: 2.36
+  :DRILL_LAST_QUALITY: 3
+  :DRILL_LAST_REVIEWED: [2018-11-06 Tue 13:37]
   :END:
 [Ontology] is the philosophical study of [being. It studies concepts that
 directly relate to being, in particular becoming, existence, reality.]
@@ -321,12 +319,12 @@ directly relate to being, in particular becoming, existence, reality.]
   :ID:       2f0293bf-b1e9-4e87-9c1a-818e5e9cbdab
   :DRILL_LAST_INTERVAL: 0.0
   :DRILL_REPEATS_SINCE_FAIL: 1
-  :DRILL_TOTAL_REPEATS: 7
-  :DRILL_FAILURE_COUNT: 6
-  :DRILL_AVERAGE_QUALITY: 1.285
+  :DRILL_TOTAL_REPEATS: 8
+  :DRILL_FAILURE_COUNT: 7
+  :DRILL_AVERAGE_QUALITY: 1.249
   :DRILL_EASE: 2.36
   :DRILL_LAST_QUALITY: 1
-  :DRILL_LAST_REVIEWED: [2018-11-06 Tue 11:36]
+  :DRILL_LAST_REVIEWED: [2018-11-06 Tue 13:36]
   :END:
 Define the word
 **** English
@@ -337,17 +335,18 @@ intelligence achieved far ahead of normal development schedules
 There is a limited branch of children whose precocity has led them to be deemed genuises.
 
 *** Adjective :drill:
+    SCHEDULED: <2018-11-09 Fri>
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
   :ID:       71b134e4-084c-4c64-ab68-661818dd23f4
-  :DRILL_LAST_INTERVAL: 0.0
-  :DRILL_REPEATS_SINCE_FAIL: 1
-  :DRILL_TOTAL_REPEATS: 6
+  :DRILL_LAST_INTERVAL: 3.499
+  :DRILL_REPEATS_SINCE_FAIL: 2
+  :DRILL_TOTAL_REPEATS: 7
   :DRILL_FAILURE_COUNT: 5
-  :DRILL_AVERAGE_QUALITY: 2.0
-  :DRILL_EASE: 2.5
-  :DRILL_LAST_QUALITY: 2
-  :DRILL_LAST_REVIEWED: [2018-11-06 Tue 11:34]
+  :DRILL_AVERAGE_QUALITY: 2.143
+  :DRILL_EASE: 2.36
+  :DRILL_LAST_QUALITY: 3
+  :DRILL_LAST_REVIEWED: [2018-11-06 Tue 13:35]
   :END:
 Define the word
 **** English
@@ -363,12 +362,12 @@ Gary was unflappable in his handling of the buses getting stuck in the mud.
   :ID:       ef491477-ccb8-4db2-972f-5ab9f773b089
   :DRILL_LAST_INTERVAL: 0.0
   :DRILL_REPEATS_SINCE_FAIL: 1
-  :DRILL_TOTAL_REPEATS: 7
-  :DRILL_FAILURE_COUNT: 6
-  :DRILL_AVERAGE_QUALITY: 1.572
+  :DRILL_TOTAL_REPEATS: 8
+  :DRILL_FAILURE_COUNT: 7
+  :DRILL_AVERAGE_QUALITY: 1.501
   :DRILL_EASE: 2.36
   :DRILL_LAST_QUALITY: 1
-  :DRILL_LAST_REVIEWED: [2018-11-06 Tue 11:34]
+  :DRILL_LAST_REVIEWED: [2018-11-06 Tue 13:35]
   :END:
 Define the word
 **** English
@@ -380,17 +379,18 @@ The verisimilitude of her performance is gripping.
 
 
 *** Noun                                                        :drill:
+    SCHEDULED: <2018-11-10 Sat>
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
   :ID:       0112f1c2-b988-48db-a6a4-48877adce953
-  :DRILL_LAST_INTERVAL: 0.0
-  :DRILL_REPEATS_SINCE_FAIL: 1
-  :DRILL_TOTAL_REPEATS: 2
+  :DRILL_LAST_INTERVAL: 4.395
+  :DRILL_REPEATS_SINCE_FAIL: 2
+  :DRILL_TOTAL_REPEATS: 3
   :DRILL_FAILURE_COUNT: 2
-  :DRILL_AVERAGE_QUALITY: 1.0
-  :DRILL_EASE: 2.5
-  :DRILL_LAST_QUALITY: 1
-  :DRILL_LAST_REVIEWED: [2018-11-06 Tue 11:34]
+  :DRILL_AVERAGE_QUALITY: 1.667
+  :DRILL_EASE: 2.36
+  :DRILL_LAST_QUALITY: 3
+  :DRILL_LAST_REVIEWED: [2018-11-06 Tue 13:33]
   :END:
 Define the word
 **** English
@@ -457,12 +457,12 @@ one word answers.
   :ID:       ac519bac-9307-4807-bb99-dd6304d3ae54
   :DRILL_LAST_INTERVAL: 0.0
   :DRILL_REPEATS_SINCE_FAIL: 1
-  :DRILL_TOTAL_REPEATS: 2
-  :DRILL_FAILURE_COUNT: 2
+  :DRILL_TOTAL_REPEATS: 3
+  :DRILL_FAILURE_COUNT: 3
   :DRILL_AVERAGE_QUALITY: 1.0
   :DRILL_EASE: 2.5
   :DRILL_LAST_QUALITY: 1
-  :DRILL_LAST_REVIEWED: [2018-11-06 Tue 11:35]
+  :DRILL_LAST_REVIEWED: [2018-11-06 Tue 13:36]
   :END:
 Define the word
 **** English
@@ -493,12 +493,12 @@ The legal parlance used by attorneys has its roots in the Latin language.
   :ID:       8c9463bd-afaa-42c8-8cc2-fc44f75ef34b
   :DRILL_LAST_INTERVAL: 0.0
   :DRILL_REPEATS_SINCE_FAIL: 1
-  :DRILL_TOTAL_REPEATS: 2
-  :DRILL_FAILURE_COUNT: 2
+  :DRILL_TOTAL_REPEATS: 3
+  :DRILL_FAILURE_COUNT: 3
   :DRILL_AVERAGE_QUALITY: 1.0
   :DRILL_EASE: 2.5
   :DRILL_LAST_QUALITY: 1
-  :DRILL_LAST_REVIEWED: [2018-11-06 Tue 11:37]
+  :DRILL_LAST_REVIEWED: [2018-11-06 Tue 13:35]
   :END:
 Define the word
 **** English
@@ -521,12 +521,12 @@ nature spirit with ears and a tail resembling those of a horse.
   :ID:       e1d06f2f-5094-474e-975c-d8d6730d444d
   :DRILL_LAST_INTERVAL: 0.0
   :DRILL_REPEATS_SINCE_FAIL: 1
-  :DRILL_TOTAL_REPEATS: 3
-  :DRILL_FAILURE_COUNT: 2
+  :DRILL_TOTAL_REPEATS: 4
+  :DRILL_FAILURE_COUNT: 3
   :DRILL_AVERAGE_QUALITY: 2.0
   :DRILL_EASE: 2.36
-  :DRILL_LAST_QUALITY: 1
-  :DRILL_LAST_REVIEWED: [2018-11-06 Tue 11:36]
+  :DRILL_LAST_QUALITY: 2
+  :DRILL_LAST_REVIEWED: [2018-11-06 Tue 13:36]
   :END:
 Define the word
 **** English
@@ -568,12 +568,12 @@ disorder or a desired malediction.
   :ID:       7f9ec970-a040-4a7d-87f6-c779981825db
   :DRILL_LAST_INTERVAL: 0.0
   :DRILL_REPEATS_SINCE_FAIL: 1
-  :DRILL_TOTAL_REPEATS: 1
-  :DRILL_FAILURE_COUNT: 1
+  :DRILL_TOTAL_REPEATS: 2
+  :DRILL_FAILURE_COUNT: 2
   :DRILL_AVERAGE_QUALITY: 1.0
   :DRILL_EASE: 2.5
   :DRILL_LAST_QUALITY: 1
-  :DRILL_LAST_REVIEWED: [2018-10-15 Mon 14:18]
+  :DRILL_LAST_REVIEWED: [2018-11-06 Tue 13:34]
   :END:
 Define the word
 **** English
@@ -605,12 +605,12 @@ Yet to them we can impute none of history's great convulsions
   :ID:       697fe722-2239-4da7-b5c8-e7600a942a9c
   :DRILL_LAST_INTERVAL: 0.0
   :DRILL_REPEATS_SINCE_FAIL: 1
-  :DRILL_TOTAL_REPEATS: 2
-  :DRILL_FAILURE_COUNT: 2
+  :DRILL_TOTAL_REPEATS: 3
+  :DRILL_FAILURE_COUNT: 3
   :DRILL_AVERAGE_QUALITY: 1.0
   :DRILL_EASE: 2.5
   :DRILL_LAST_QUALITY: 1
-  :DRILL_LAST_REVIEWED: [2018-11-06 Tue 11:36]
+  :DRILL_LAST_REVIEWED: [2018-11-06 Tue 13:33]
   :END:
 Define the word
 **** English
@@ -639,12 +639,12 @@ her nascent singing career
   :ID:       06a40333-0522-405f-aa65-9fc1e20cf16c
   :DRILL_LAST_INTERVAL: 0.0
   :DRILL_REPEATS_SINCE_FAIL: 1
-  :DRILL_TOTAL_REPEATS: 2
-  :DRILL_FAILURE_COUNT: 2
+  :DRILL_TOTAL_REPEATS: 3
+  :DRILL_FAILURE_COUNT: 3
   :DRILL_AVERAGE_QUALITY: 1.0
   :DRILL_EASE: 2.5
   :DRILL_LAST_QUALITY: 1
-  :DRILL_LAST_REVIEWED: [2018-11-06 Tue 11:37]
+  :DRILL_LAST_REVIEWED: [2018-11-06 Tue 13:35]
   :END:
 Define the word
 **** English
@@ -663,12 +663,12 @@ pithy with aphorism. -John Keegan
   :ID:       30bf1409-79d6-4346-a3b6-862f176b5eba
   :DRILL_LAST_INTERVAL: 0.0
   :DRILL_REPEATS_SINCE_FAIL: 1
-  :DRILL_TOTAL_REPEATS: 1
-  :DRILL_FAILURE_COUNT: 1
-  :DRILL_AVERAGE_QUALITY: 2.0
+  :DRILL_TOTAL_REPEATS: 2
+  :DRILL_FAILURE_COUNT: 2
+  :DRILL_AVERAGE_QUALITY: 1.5
   :DRILL_EASE: 2.5
-  :DRILL_LAST_QUALITY: 2
-  :DRILL_LAST_REVIEWED: [2018-10-15 Mon 14:18]
+  :DRILL_LAST_QUALITY: 1
+  :DRILL_LAST_REVIEWED: [2018-11-06 Tue 13:36]
   :END:
 Define the word
 **** English
@@ -700,12 +700,12 @@ the vagaries of a rather eccentric, elderly lady
   :ID:       db2fb4b1-66a4-45b2-a87f-2ebb586ed306
   :DRILL_LAST_INTERVAL: 0.0
   :DRILL_REPEATS_SINCE_FAIL: 1
-  :DRILL_TOTAL_REPEATS: 1
-  :DRILL_FAILURE_COUNT: 1
-  :DRILL_AVERAGE_QUALITY: 1.0
+  :DRILL_TOTAL_REPEATS: 2
+  :DRILL_FAILURE_COUNT: 2
+  :DRILL_AVERAGE_QUALITY: 1.5
   :DRILL_EASE: 2.5
-  :DRILL_LAST_QUALITY: 1
-  :DRILL_LAST_REVIEWED: [2018-10-15 Mon 14:18]
+  :DRILL_LAST_QUALITY: 2
+  :DRILL_LAST_REVIEWED: [2018-11-06 Tue 13:36]
   :END:
 Define the word
 **** English
@@ -820,6 +820,17 @@ haute
 fashionably elegant or high-class
 **** Example sentence
 a store filled with haute kisch
+
+*** Noun                                                              :drill:
+  :PROPERTIES:
+  :DRILL_CARD_TYPE: twosided
+  :ID:       72738c3f-7bf4-47df-9595-24c4425d70b5
+  :END:
+Define the word
+**** English
+under the jail
+**** Definition
+life imprisonment, in response to an egregious criminal act or outlandishly antisocial behavior
 
 *** Fact
 # :drill:
