--- a/files/spacedRepetition.org
+++ b/files/spacedRepetition.org
@@ -972,6 +972,18 @@ dressed up like a dog's dinner
 a) a complete mess
 b) dressed up, usually excessively
 
+*** Adjective, Noun, Verb
+  :drill:
+  :PROPERTIES:
+  :DRILL_CARD_TYPE: twosided
+  :END:
+Define the word
+**** English
+coup d'e2tat
+**** Definition
+a coup, a putsch, golpe, or an overthrow.
+**** Example sentence
+
 
 
 *** Fact
