--- a/spacedRepetition.org
+++ b/spacedRepetition.org
@@ -25,18 +25,18 @@ overcome with anger; extremely indignant
 Mark was apoplectic with rage at the decision
 
 ** Adjective                                                          :drill:
-    SCHEDULED: <2018-12-16 Sun>
+    SCHEDULED: <2018-12-22 Sat>
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
   :ID:       e52dcdd5-23f4-4c37-8d36-9b9b3e47ad62
-  :DRILL_LAST_INTERVAL: 2.8736
-  :DRILL_REPEATS_SINCE_FAIL: 2
-  :DRILL_TOTAL_REPEATS: 15
+  :DRILL_LAST_INTERVAL: 6.1814
+  :DRILL_REPEATS_SINCE_FAIL: 3
+  :DRILL_TOTAL_REPEATS: 16
   :DRILL_FAILURE_COUNT: 11
-  :DRILL_AVERAGE_QUALITY: 1.867
-  :DRILL_EASE: 2.08
+  :DRILL_AVERAGE_QUALITY: 1.938
+  :DRILL_EASE: 1.94
   :DRILL_LAST_QUALITY: 3
-  :DRILL_LAST_REVIEWED: [2018-12-13 Thu 14:09]
+  :DRILL_LAST_REVIEWED: [2018-12-16 Sun 15:33]
   :END:
 Define the phrase
 *** English
@@ -130,18 +130,18 @@ The us of words to express something other than and especially the opposite of
 the literal meaning
 
 ** Adjective                                                          :drill:
-    SCHEDULED: <2018-12-16 Sun>
+    SCHEDULED: <2018-12-31 Mon>
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
   :ID:       4a82cb00-118c-4a69-87f3-70e5837b7697
-  :DRILL_LAST_INTERVAL: 7.2215
-  :DRILL_REPEATS_SINCE_FAIL: 3
-  :DRILL_TOTAL_REPEATS: 9
+  :DRILL_LAST_INTERVAL: 14.761
+  :DRILL_REPEATS_SINCE_FAIL: 4
+  :DRILL_TOTAL_REPEATS: 10
   :DRILL_FAILURE_COUNT: 4
-  :DRILL_AVERAGE_QUALITY: 2.889
+  :DRILL_AVERAGE_QUALITY: 3.0
   :DRILL_EASE: 2.22
-  :DRILL_LAST_QUALITY: 3
-  :DRILL_LAST_REVIEWED: [2018-12-09 Sun 13:14]
+  :DRILL_LAST_QUALITY: 4
+  :DRILL_LAST_REVIEWED: [2018-12-16 Sun 15:34]
   :END:
 Define the word
 *** English
@@ -496,18 +496,17 @@ those with a particular job or interest
 The legal parlance used by attorneys has its roots in the Latin language.
 
 ** Adjective                                                          :drill:
-    SCHEDULED: <2018-12-16 Sun>
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
   :ID:       8c9463bd-afaa-42c8-8cc2-fc44f75ef34b
-  :DRILL_LAST_INTERVAL: 2.5113
-  :DRILL_REPEATS_SINCE_FAIL: 2
-  :DRILL_TOTAL_REPEATS: 8
-  :DRILL_FAILURE_COUNT: 7
-  :DRILL_AVERAGE_QUALITY: 1.499
+  :DRILL_LAST_INTERVAL: 0.0
+  :DRILL_REPEATS_SINCE_FAIL: 1
+  :DRILL_TOTAL_REPEATS: 9
+  :DRILL_FAILURE_COUNT: 8
+  :DRILL_AVERAGE_QUALITY: 1.444
   :DRILL_EASE: 2.36
-  :DRILL_LAST_QUALITY: 3
-  :DRILL_LAST_REVIEWED: [2018-12-13 Thu 14:09]
+  :DRILL_LAST_QUALITY: 1
+  :DRILL_LAST_REVIEWED: [2018-12-16 Sun 15:34]
   :END:
 Define the word
 *** English
@@ -546,18 +545,18 @@ drivel
 silly nonsense
 
 ** Adjective                                                          :drill:
-    SCHEDULED: <2018-12-16 Sun>
+    SCHEDULED: <2018-12-23 Sun>
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
   :ID:       d4cbfb59-d109-4cb9-ba43-68dedd3095bb
-  :DRILL_LAST_INTERVAL: 3.4472
-  :DRILL_REPEATS_SINCE_FAIL: 2
-  :DRILL_TOTAL_REPEATS: 4
+  :DRILL_LAST_INTERVAL: 7.3243
+  :DRILL_REPEATS_SINCE_FAIL: 3
+  :DRILL_TOTAL_REPEATS: 5
   :DRILL_FAILURE_COUNT: 3
-  :DRILL_AVERAGE_QUALITY: 1.5
-  :DRILL_EASE: 2.36
+  :DRILL_AVERAGE_QUALITY: 1.8
+  :DRILL_EASE: 2.22
   :DRILL_LAST_QUALITY: 3
-  :DRILL_LAST_REVIEWED: [2018-12-13 Thu 14:09]
+  :DRILL_LAST_REVIEWED: [2018-12-16 Sun 15:34]
   :END:
 Define the word
 *** English
@@ -674,18 +673,18 @@ coming or having recently come into existence
 her nascent singing career
 
 ** Noun                                                               :drill:
-    SCHEDULED: <2018-12-16 Sun>
+    SCHEDULED: <2018-12-26 Wed>
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
   :ID:       06a40333-0522-405f-aa65-9fc1e20cf16c
-  :DRILL_LAST_INTERVAL: 3.3672
-  :DRILL_REPEATS_SINCE_FAIL: 2
-  :DRILL_TOTAL_REPEATS: 8
+  :DRILL_LAST_INTERVAL: 9.9109
+  :DRILL_REPEATS_SINCE_FAIL: 3
+  :DRILL_TOTAL_REPEATS: 9
   :DRILL_FAILURE_COUNT: 6
-  :DRILL_AVERAGE_QUALITY: 1.875
+  :DRILL_AVERAGE_QUALITY: 2.111
   :DRILL_EASE: 2.46
-  :DRILL_LAST_QUALITY: 3
-  :DRILL_LAST_REVIEWED: [2018-12-13 Thu 14:09]
+  :DRILL_LAST_QUALITY: 4
+  :DRILL_LAST_REVIEWED: [2018-12-16 Sun 15:34]
   :END:
 Define the word
 *** English
@@ -851,18 +850,17 @@ for all their intervals of oblivion: they will never be indebted for a single
 moment of happiness.
 
 ** Adjective                                                          :drill:
-    SCHEDULED: <2018-12-16 Sun>
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
   :ID:       83d92250-d3e1-4769-83b9-ebc98c056940
-  :DRILL_LAST_INTERVAL: 3.4161
-  :DRILL_REPEATS_SINCE_FAIL: 2
-  :DRILL_TOTAL_REPEATS: 3
-  :DRILL_FAILURE_COUNT: 2
-  :DRILL_AVERAGE_QUALITY: 1.667
+  :DRILL_LAST_INTERVAL: 0.0
+  :DRILL_REPEATS_SINCE_FAIL: 1
+  :DRILL_TOTAL_REPEATS: 4
+  :DRILL_FAILURE_COUNT: 3
+  :DRILL_AVERAGE_QUALITY: 1.75
   :DRILL_EASE: 2.36
-  :DRILL_LAST_QUALITY: 3
-  :DRILL_LAST_REVIEWED: [2018-12-13 Thu 14:09]
+  :DRILL_LAST_QUALITY: 2
+  :DRILL_LAST_REVIEWED: [2018-12-16 Sun 15:34]
   :END:
 Define the word
 *** English
@@ -939,41 +937,39 @@ under the jail
 life imprisonment, in response to an egregious criminal act or outlandishly antisocial behavior
 
 ** Noun                                                               :drill:
-   SCHEDULED: <2018-12-16 Sun>
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
   :ID:       135ef90e-9966-4ed9-90b3-cb1be8fc453e
-  :DRILL_LAST_INTERVAL: 3.1475
-  :DRILL_REPEATS_SINCE_FAIL: 2
-  :DRILL_TOTAL_REPEATS: 2
-  :DRILL_FAILURE_COUNT: 1
-  :DRILL_AVERAGE_QUALITY: 2.0
+  :DRILL_LAST_INTERVAL: 0.0
+  :DRILL_REPEATS_SINCE_FAIL: 1
+  :DRILL_TOTAL_REPEATS: 3
+  :DRILL_FAILURE_COUNT: 2
+  :DRILL_AVERAGE_QUALITY: 1.667
   :DRILL_EASE: 2.36
-  :DRILL_LAST_QUALITY: 3
-  :DRILL_LAST_REVIEWED: [2018-12-13 Thu 15:05]
+  :DRILL_LAST_QUALITY: 1
+  :DRILL_LAST_REVIEWED: [2018-12-16 Sun 15:34]
   :END:
 Define the word
 *** English
 skeng
 *** Definition
-A knife / blade weapong
+A knife / blade weapon
 *** Example sentence
 And if she's deader than me dat gyal can't know me, probably had a skeng on me
 coz the boys in the other side know me.
 
 ** Noun                                                               :drill:
-   SCHEDULED: <2018-12-16 Sun>
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
   :ID:       51899130-a00a-4b55-99e4-765d9387a7fb
-  :DRILL_LAST_INTERVAL: 3.2201
-  :DRILL_REPEATS_SINCE_FAIL: 2
-  :DRILL_TOTAL_REPEATS: 2
-  :DRILL_FAILURE_COUNT: 1
-  :DRILL_AVERAGE_QUALITY: 2.0
+  :DRILL_LAST_INTERVAL: 0.0
+  :DRILL_REPEATS_SINCE_FAIL: 1
+  :DRILL_TOTAL_REPEATS: 3
+  :DRILL_FAILURE_COUNT: 2
+  :DRILL_AVERAGE_QUALITY: 1.667
   :DRILL_EASE: 2.36
-  :DRILL_LAST_QUALITY: 3
-  :DRILL_LAST_REVIEWED: [2018-12-13 Thu 15:05]
+  :DRILL_LAST_QUALITY: 1
+  :DRILL_LAST_REVIEWED: [2018-12-16 Sun 15:34]
   :END:
 Define the word
 *** English
@@ -1296,6 +1292,14 @@ Come on, let's go do one
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
   :ID:       a734d7dc-a73b-4b38-8298-4665d3067bb3
+  :DRILL_LAST_INTERVAL: 0.0
+  :DRILL_REPEATS_SINCE_FAIL: 1
+  :DRILL_TOTAL_REPEATS: 1
+  :DRILL_FAILURE_COUNT: 1
+  :DRILL_AVERAGE_QUALITY: 1.0
+  :DRILL_EASE: 2.5
+  :DRILL_LAST_QUALITY: 1
+  :DRILL_LAST_REVIEWED: [2018-12-16 Sun 15:35]
   :END:
 Define the word
 *** English
@@ -1349,6 +1353,19 @@ boxing
 Some see that same pugilism as a negative, especially when he's used it to
 deliver sharp upper cuts to top Republican leaders who had once been in his
 corner and now harshly criticize him as an ungrateful opportunist.
+
+** Noun                                                               :drill:
+  :PROPERTIES:
+  :DRILL_CARD_TYPE: twosided
+  :ID:       103ffa1f-6c18-4be8-a9b1-f7ed10967d97
+  :END:
+Define the word
+*** English
+somnolence
+*** Definition
+A strong desire to sleep. the quality or state of being drowsy
+*** Example sentence
+
 
 * -----------------------------------------------------------------------------------------------
 
